adding google error-prone and fixing issues it found